# struct-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
struct_diff/: __init__.py  cli.py  converter.py  differ.py  formatter.py  merger.py  schema_gen.py  validator.py
